--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -10,10 +10,17 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	width: 1000px;
+	width: 1200px;
 	height: calc(100vh - #{$margin_y});
 	border: $main-border;
 	border-radius: $main-border-radius;
+	background-color: rgba(0,0,0,0.3);
+
+
+	@media screen and (max-width: 1000px) {
+		max-width: 1000px;
+		width: auto;
+	}
 
 	@media screen and (max-width: 800px) {
 		max-width: 800px;
