--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,6 +1,14 @@
+@import "mixins/backdrop";
+@import "mixins/grid";
+@import "mixins/layout";
+@import "mixins/removeDefault";
+@import "mixins/scrollbar";
+@import "mixins/hover";
 @import "app";
 @import "button";
 @import "header";
+@import "modal";
 @import "previewList";
 @import "variables";
+@import "reboot";
 @import "vs";
