--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -1,25 +1,17 @@
-$btn-border-width: 1px;
-$btn-font-size: 1rem;
-
-.Button {
-	display: inline-block;
-	text-align: center;
-	vertical-align: middle;
-	user-select: none;
-	border: $btn-border-width solid;
-	border-radius: 5px;
-	flex: 0 1 60px;
-	width: 50px;
-	height: 50px; 
-
-	&:active {
-
-	}
-
-	&:hover,
-	&:focus {}
-
+.button {
+	@include remove_default_button_style;
 }
-.Button.search {
-	flex: 0 1 100px;
+
+.close-window-header-btn {
+	padding: $modal-header-padding;
+	margin: (-$modal-header-padding-y) (-$modal-header-padding-x) (-$modal-header-padding-y) auto;
+	@include remove_default_button_style;
+	font-family: $font-family-sans-serif;
+	font-size: 1.5rem;
+	font-weight: 700;
+	line-height: 1rem;
+
+	:not(:disabled) {
+		cursor: pointer;
+	}
 }
