--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,7 +1,35 @@
+$header_btn_border_width: 1px;
+$square_btn_size: 40px;
+$header_btn_height: $square_btn_size !default;
+$header_height: $header_btn_height + ($border_margin * 2);
 
 .Header {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-evenly;
-	margin: $border-margin;
+	@include apply_flex(row, nowrap) {
+		justify-content: space-evenly;
+	};
+	margin: #{$border_margin};
+
+
+	.header-button {
+		display: inline-block;
+		text-align: center;
+		vertical-align: middle;
+		user-select: none;
+		border: $header_btn_border_width solid #000;
+		border-radius: 5px;
+		flex: 0 1 60px;
+		width: $square_btn_size;
+		height: #{$header_btn_height}; 
+
+		&:active {
+
+		}
+
+		&:hover,
+		&:focus {}
+
+	}
+	.header-button.search {
+		flex: 0 1 100px;
+	}
 }
