--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -5,6 +5,7 @@
 @import "mixins/scrollbar";
 @import "mixins/hover";
 @import "app";
+@import "backdrop";
 @import "button";
 @import "header";
 @import "modal";
