--- a/src/assets/styles/_modal.scss
+++ b/src/assets/styles/_modal.scss
@@ -1,17 +1,15 @@
 .Modal {
 	&[aria-hidden=true] {
-		display: none;
+		opacity: 0;
+		transform: translateY(-100%);
 	}
-
+	position: fixed;
+	width: 100%;
+	height: 100%;
 	@include apply_flex{
 		justify-content: center;
 		align-items: center;
 	};
-	width: 100vw;
-	height: 100vh;
-	top: 0;
-	left: 0;
-	position: fixed;
 	overflow: hidden;
   // Prevent Chrome on Windows from adding a focus outline. For details, see
   // https://github.com/twbs/bootstrap/pull/10951.
@@ -19,39 +17,83 @@
   // We deliberately don't use `-webkit-overflow-scrolling: touch;` due to a
   // gnarly iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
 	// See also https://github.com/twbs/bootstrap/issues/17695
-	
-	.backdrop {
-		@include add_backdrop;
-	}
-	
+	transition: opacity .5s linear;
+
 	.modal-body {
-		width: auto;
-		box-sizing: border-box;
 		z-index: $zindex-modal;
-		background-color: #fff;
+		box-sizing: border-box;
+		background-color: #c9c9c9;
 		position: relative;
 		@include apply_flex{
 			align-items: center;
 			justify-content: space-between;
 		}
-		// allow clicks to pass through for custom click handling to close modal
-		pointer-events: none;
-
-	// When fading in the modal, animate it to slide down
-		transition: $transition-base;
-		transform: $modal-fade-transform;
-		transform: $modal-show-transform;
+	}
+	
+	&[aria-modal=true] {
+		.modal-body {
+			animation: openModal 1s ease-out forwards;
+		}
 	}
 
 	.modal-header {
 		@include apply_flex(row){
 			justify-content: space-between;
 			align-items: flex-start;
-		}
+		};
 		margin-bottom: 0;
 		line-height: $modal-title-line-height;
 		padding: $modal-header-padding;
 		font-size: 1.5rem;
+		background-color: #fff;
+		pointer-events: auto;
+	}
+
+	.modal-backdrop {
+		@include apply_fixed_windows;
+	}
+
+	&[aria-hidden=true] { 
+		.modal-backdrop {
+			z-index: -5;
+			@include hide_backdrop; 
+		}
+	}
+	&[aria-modal=true] {
+		.modal-backdrop {
+			pointer-events: auto;
+			z-index: $zindex-modal-backdrop;
+			@include show_backdrop; 
+		}
+	}
+
+	@keyframes openModal {
+		0% {
+			opacity: 0;
+			transform: translateY(-100%);
+		}
+		50% {
+			opacity: 1;
+			transform: translateY(10%);
+		}
+		100% {
+			opacity: 1;
+			transform: translateY(0);
+		}
+	}
+	@keyframes closeModal {
+		0% {
+			opacity: 0;
+			transform: translateY(-100%);
+		}
+		50% {
+			opacity: 1;
+			transform: translateY(10%);
+		}
+		100% {
+			opacity: 1;
+			transform: translateY(0);
+		}
 	}
 	
 }
