--- a/src/assets/styles/_modal.scss
+++ b/src/assets/styles/_modal.scss
@@ -1,8 +1,15 @@
 .Modal {
-	&[aria-hidden=true] {
+	&[data-shown=false] {
 		opacity: 0;
 		transform: translateY(-100%);
 	}
+	
+	&[data-shown=true] {
+		.modal-body {
+			animation: openModal 1s ease-out forwards;
+		}
+	}
+
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -29,12 +36,6 @@
 			justify-content: space-between;
 		}
 	}
-	
-	&[aria-modal=true] {
-		.modal-body {
-			animation: openModal 1s ease-out forwards;
-		}
-	}
 
 	.modal-header {
 		@include apply_flex(row){
@@ -53,13 +54,13 @@
 		@include apply_fixed_windows;
 	}
 
-	&[aria-hidden=true] { 
+	&[data-shown=false] { 
 		.modal-backdrop {
 			z-index: -5;
 			@include hide_backdrop; 
 		}
 	}
-	&[aria-modal=true] {
+	&[data-shown=true] {
 		.modal-backdrop {
 			pointer-events: auto;
 			z-index: $zindex-modal-backdrop;
