--- a/src/assets/styles/_modal.scss
+++ b/src/assets/styles/_modal.scss
@@ -1,13 +1,14 @@
 .Modal {
-	&[data-modal-active=false] {
-		// opacity: 0;
-		// transform: translateY(-100%);
-		animation: closeModal 1s ease-out forwards;
+		&.active {
+		.modal-body {
+		animation: openModal 0.3s ease-out forwards;
+		}
 	}
 	
-	&[data-modal-active=true] {
-		.modal-body {
-			animation: openModal 1s ease-out forwards;
+		&:not(.active) {
+			.modal-body {
+				// transform: translateY(-100%);
+				animation: closeModal 0.3s ease-out forwards;
 		}
 	}
 
@@ -25,7 +26,7 @@
   // We deliberately don't use `-webkit-overflow-scrolling: touch;` due to a
   // gnarly iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
 	// See also https://github.com/twbs/bootstrap/issues/17695
-	transition: opacity .5s linear;
+	// transition: opacity .5s linear;
 
 	.modal-body {
 		z-index: $zindex-modal;
@@ -55,13 +56,12 @@
 		@include apply_fixed_windows;
 	}
 
-	&[data-modal-active=false] { 
+		&:not(.active) { 
 		.modal-backdrop {
-			z-index: -5;
 			@include hide_backdrop; 
 		}
 	}
-	&[data-modal-active=true] {
+		&.active {
 		.modal-backdrop {
 			pointer-events: auto;
 			z-index: $zindex-modal-backdrop;
@@ -85,15 +85,15 @@
 	}
 	@keyframes closeModal {
 		0% {
-			opacity: 0;
+			opacity: 1;
 			transform: translateY(0%);
 		}
-		10% {
-			opacity: 1;
+		20% {
+			opacity: 0.8;
 			transform: translateY(10%);
 		}
 		100% {
-			opacity: 1;
+			opacity: 0;
 			transform: translateY(-100%);
 		}
 	}
