--- a/src/assets/styles/mixins/_backdrop.scss
+++ b/src/assets/styles/mixins/_backdrop.scss
@@ -1,6 +1,8 @@
 @mixin hide_backdrop {
-	animation: hideBackDrop 0.3s ease-out 1;
+	animation: hideBackDrop 0.3s ease-in 1;
 	background-color: transparentize(#000, 1);
+	opacity: 0;
+	z-index: -5;
 
 	@keyframes hideBackDrop {
 		0% {
@@ -8,11 +10,8 @@
 			z-index: $zindex-modal-backdrop;
 			background-color: transparentize(#000, 0.4);
 		}
-		99% {
-			opacity: 0;
-		}
 		100% {
-			z-index: -5;
+			opacity: 0;
 		}
 	}
 }
