--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,6 +1,7 @@
 @import "mixins/backdrop";
 @import "mixins/grid";
 @import "mixins/layout";
+@import "mixins/dropdown";
 @import "mixins/removeDefault";
 @import "mixins/scrollbar";
 @import "mixins/hover";
@@ -9,6 +10,7 @@
 @import "button";
 @import "header";
 @import "modal";
+@import "previewThumb";
 @import "previewList";
 @import "variables";
 @import "reboot";
