--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,11 +1,11 @@
 
 //                          !!!                          \\
-$row-transition-time: 300;//ms
-//converted transition time
-$transition-time: 300/1000 + s;
-//This export redefines transition time and another used in css animation and js modules.
+$close-modal-keyframes-name: close !default;
+$open-modal-keyframes-name: open !default;
+//This export redefines variables used in css animation and js modules.
 :export { 
-  TRANSITION_DURATION: $row-transition-time;
+  closeModalKeyframes: $close-modal-keyframes-name;
+  openModalKeyframes: $open-modal-keyframes-name;
 };
 //                          !!!                          \\
 
@@ -127,12 +127,23 @@ $zindex-tooltip:                    1070 !default;
 
 //Modal styles from Bootstrap
 
-$modal-fade-transform:              translate(0, -50px) !default;
-$modal-show-transform:              none !default;
 $modal-transition:                  transform .3s ease-out !default;
+$modal-transition-in: $open-modal-keyframes-name 0.3s ease-out forwards !default;
+$modal-transition-out: $close-modal-keyframes-name 0.3s ease-out forwards !default;
 $modal-title-line-height:           $line-height-base !default;
 $modal-header-padding:              1rem !default;$modal-header-padding-y:            1rem !default;
 $modal-header-padding-x:            1rem !default;
+$modal-footer-padding:              .5rem !default;
+
+// Modals
+
+// Padding applied to the modal body
+$modal-inner-padding:               1rem !default;
+
+$modal-dialog-margin:               .5rem !default;
+$modal-dialog-margin-y-sm-up:       1.75rem !default;
+
+$modal-title-line-height:           $line-height-base !default;
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
