--- a/src/assets/styles/_previewThumb.scss
+++ b/src/assets/styles/_previewThumb.scss
@@ -8,10 +8,11 @@
 		align-items: center;
 	};
 
-	h6 {
-		padding: 8px auto;
+	h5 {
+		padding: 1rem auto;
 		margin: 0;
 		background-color: rgba(0,0,0,0.5);
+		align-self: center;
 	}
 
 	img {
