added draggablePlayer window, initially styled, connected to the store and reducers, added actions

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -8,6 +8,7 @@
 @import "app";
 @import "backdrop";
 @import "button";
+@import "draggablePlayer";
 @import "header";
 @import "modal";
 @import "previewThumb";
