--- a/src/assets/styles/_draggablePlayer.scss
+++ b/src/assets/styles/_draggablePlayer.scss
@@ -13,6 +13,8 @@
 	z-index: $zindex-sticky;
 	background-color: #ccc;
 	border: 1px solid #000;
+	margin: 10px;
+	padding: 3px;
 
 	& .dragPlayer-header {
 		@include apply_flex(row, nowrap) {
@@ -20,12 +22,13 @@
 		}
 		background-color: #fff;
 		
-		& .draggableArea {
+		& .draggableAnchorDiv {
 			align-self: center;
 			width: 100%;
 			height: 10px;
 			cursor: move;
 			background-color: #f00;
+			touch-action: none;
 		}
 		
 		.x-close-btn {
