--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -8,7 +8,7 @@
 @import "app";
 @import "backdrop";
 @import "button";
-@import "draggablePlayer";
+@import "draggableWrapper";
 @import "header";
 @import "modal";
 @import "previewThumb";
