--- a/src/assets/styles/_draggableWrapper.scss
+++ b/src/assets/styles/_draggableWrapper.scss
@@ -3,6 +3,10 @@
 		//space for animation
 	}
 
+	&.changing {
+		@include flash_effect(in);
+	}
+
 	@include apply_flex() {
 		justify-content: space-between;
 		align-content: center;
@@ -14,12 +18,8 @@
 	background-color: transparentize(#fff, 0.05);
 	border: $main_border;
 	border-radius: $main_border_radius;
-	line-height: $modal-title-line-height;
-	padding: $modal-header-padding;
-	// margin: 10px;
-	// padding: 3px;
 	font-size: $h4-size;
-
+	
 	& .dragWrapper-header {
 		@include apply_flex(row, nowrap) {
 			justify-content: space-between;
@@ -27,6 +27,8 @@
 		width: 100%;
 		text-align: center;
 		border-bottom: 1px solid rgb(90, 90, 90);
+		padding: 0 $modal-header-padding/2;
+		line-height: $modal-title-line-height;
 		
 		& .draggableAnchorDiv {
 			align-self: center;
@@ -36,9 +38,9 @@
 			touch-action: none;
 			text-transform: capitalize;
 		}
-		
-		.x-close-btn {
-			
-		}
+	}
+	
+	& > *:not(header) {
+	flex-grow: 1;
 	}
 }
