--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "mixins/grid";
 @import "mixins/layout";
 @import "mixins/dropdown";
+@import "mixins/flashEffect";
 @import "mixins/removeDefault";
 @import "mixins/scrollbar";
 @import "mixins/hover";
@@ -9,6 +10,7 @@
 @import "backdrop";
 @import "button";
 @import "draggableWrapper";
+@import "embeddedPlayer";
 @import "header";
 @import "modal";
 @import "previewThumb";
