embedded player animation is fixed

--- a/src/assets/styles/_embeddedPlayer.scss
+++ b/src/assets/styles/_embeddedPlayer.scss
@@ -2,6 +2,10 @@
 	padding-top: $modal-header-padding/2;
 	height: 100%;
 
+	&.changing {
+		@include flash_in_effect(in);
+	}
+
 	& iframe {
 		width: 100%;
 		height: 100%;
