--- a/src/assets/styles/_button.scss
+++ b/src/assets/styles/_button.scss
@@ -1,26 +1,25 @@
 .button {
-	@include remove_default_button_style;
-	background-color: #fff;
+  @include remove_default_button_style;
+  background-color: #fff;
+
+  &:not(:disabled) {
+    cursor: pointer;
+  }
 }
 
 .default {
-	border: 1px solid #ccc;
+  border: 1px solid #ccc;
 }
-
 .x-close-btn {
-	padding: $modal-header-padding;
-	margin: (-$modal-header-padding-y) (-$modal-header-padding-x) (-$modal-header-padding-y) auto;
-	@include remove_default_button_style;
-	font-family: $font-family-sans-serif;
-	font-size: 1.5rem;
-	font-weight: 700;
-	line-height: 1rem;
+  padding: $modal-header-padding;
+  margin: (-$modal-header-padding-y) (-$modal-header-padding-x) (-$modal-header-padding-y) auto;
+  @include remove_default_button_style;
+  font-family: $font-family-sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1rem;
 
-
-	&::after {
-		content: 'x';
-	}
-	:not(:disabled) {
-		cursor: pointer;
-	}
+  &::after {
+    content: "x";
+  }
 }
