--- a/src/assets/styles/mixins/_flashEffect.scss
+++ b/src/assets/styles/mixins/_flashEffect.scss
@@ -1,21 +1,24 @@
-@mixin flash_effect($action) {
-  animation: #{$action} 2s ease-out;
+@mixin flash_in_effect($action) {
+  animation: flash_#{$action}_effect 0.3s ease-out;
 
-  @keyframes in {
+  @keyframes flash_in_effect {
     0% {
-      opacity: 0;
+      opacity: 1;
+    }
+    20% { 
+      opacity: 0.5;
     }
     100% {
       opacity: 1;
     }
   }
 
-  @keyframes out {
+  @keyframes flash_out_effect {
     0% {
-      opacity: 0;
+      opacity: 1;
     }
     100% {
-      opacity: 1;
+      opacity: 0;
     }
   }
 }
