--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,8 +1,7 @@
 @import "mixins/backdrop";
 @import "mixins/grid";
 @import "mixins/layout";
-@import "mixins/dropdown";
-@import "mixins/flashEffect";
+@import "mixins/_keyframes";
 @import "mixins/removeDefault";
 @import "mixins/scrollbar";
 @import "mixins/hover";
