--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -10,6 +10,7 @@
 @import "button";
 @import "draggableWrapper";
 @import "embeddedPlayer";
+@import "export";
 @import "header";
 @import "modal";
 @import "previewThumb";
