added custom animation error checker to make developing easier

--- a/src/assets/styles/_embeddedPlayer.scss
+++ b/src/assets/styles/_embeddedPlayer.scss
@@ -4,7 +4,7 @@
 
 	&.changing {
 		animation: $embedded-player-flashing;
-		@include flash_keyframes(in);
+		@include flash_keyframes();
 	}
 
 	& iframe {
