--- a/src/assets/styles/_export.scss
+++ b/src/assets/styles/_export.scss
@@ -1,6 +1,10 @@
 //This export redefines variables used in css animation and js modules.
-:export { 
+:export {
+//animation names
   closeModalKeyframes: $close-modal-keyframe;
   openModalKeyframes: $open-modal-keyframe;
   flashIn: $flash_in;
+//classnames
+  EmbaddedPlayer: $EmbeddedPlayer;
+  changing: $changing
 };
