--- a/src/assets/styles/_export.scss
+++ b/src/assets/styles/_export.scss
@@ -5,6 +5,6 @@
   openModalKeyframes: $open-modal-keyframe;
   flashIn: $flash_in;
 //classnames
-  EmbaddedPlayer: $EmbeddedPlayer;
+  EmbeddedPlayer: $EmbeddedPlayer;
   changing: $changing
 };
